bhushan: gold rate log, ravi pull

--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.html
@@ -4,31 +4,37 @@
             <div class="col-12">
                 <mat-tab-group [(selectedIndex)]="selected">
                     <mat-tab label="Basic Details">
-                        <kt-basic-details (basicFormEmit)="basicForm($event)" [invalid]="invalid.basic" [disable]="disabledForm"></kt-basic-details>
+                        <kt-basic-details (basicFormEmit)="basicForm($event)" [invalid]="invalid.basic">
+                        </kt-basic-details>
                     </mat-tab>
                     <mat-tab label="KYC Details">
-                        <kt-kyc-details (kycEmit)="kycEmit($event)" [invalid]="invalid.kyc" [disable]="disabledForm"></kt-kyc-details>
+                        <kt-kyc-details (kycEmit)="kycEmit($event)" [invalid]="invalid.kyc"></kt-kyc-details>
                     </mat-tab>
                     <mat-tab label="Bank Details">
-                        <kt-bank-details (bankFormEmit)="bankFormEmit($event)" [invalid]="invalid.bank" [disable]="disabledForm"></kt-bank-details>
+                        <kt-bank-details (bankFormEmit)="bankFormEmit($event)" [invalid]="invalid.bank">
+                        </kt-bank-details>
                     </mat-tab>
                     <mat-tab label="Nominee Details">
-                        <kt-nominee-details (nomineeEmit)="nomineeEmit($event)" [invalid]="invalid.nominee" [disable]="disabledForm"></kt-nominee-details>
+                        <kt-nominee-details (nomineeEmit)="nomineeEmit($event)" [invalid]="invalid.nominee">
+                        </kt-nominee-details>
                     </mat-tab>
                     <mat-tab label="Final Interest Calculator">
-                        <kt-final-interest-amount (interestFormEmit)="interestFormEmit($event)" [invalid]="invalid.intrest" [disable]="disabledForm"></kt-final-interest-amount>
+                        <kt-final-interest-amount (interestFormEmit)="interestFormEmit($event)"
+                            [invalid]="invalid.intreset"></kt-final-interest-amount>
                     </mat-tab>
                     <mat-tab label="Approval">
-                        <kt-approval (approvalFormEmit)="approvalFormEmit($event)" [invalid]="invalid.approval" [disable]="disabledForm"></kt-approval>
+                        <kt-approval (approvalFormEmit)="approvalFormEmit($event)" [invalid]="invalid.approval">
+                        </kt-approval>
                     </mat-tab>
                 </mat-tab-group>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <kt-ornaments (OrnamentsDataEmit)="OrnamentsDataEmit($event)" [invalid]="invalid.ornaments" [disable]="disabledForm"></kt-ornaments>
+                <kt-ornaments (OrnamentsDataEmit)="OrnamentsDataEmit($event)" [invalid]="invalid.ornaments">
+                </kt-ornaments>
             </div>
-            
+
         </div>
         <div class="row kt-margin-t-10">
             <div class="col-12">
