--- a/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.html
@@ -1,30 +1,31 @@
 <!-- <p>applied-kyc works!</p> -->
 <kt-portlet>
     <kt-portlet-body>
-        <!-- <div class="mat-table__wrapper" [ngStyle]="{'overflow-x':'hidden'}">
+        <div class="mat-table__wrapper" [ngStyle]="{'overflow-x':'hidden'}">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
                 matSortActive="id" matSortDirection="asc" matSortDisableClear>
 
                 <ng-container matColumnDef="fullName">
                     <mat-header-cell *matHeaderCellDef>Full Name</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.firstName | titlecase}}&nbsp;{{role.lastName | titlecase}}
+                    <mat-cell *matCellDef="let role">
+                        {{role.customer.firstName | titlecase}}&nbsp;{{role.customer.lastName | titlecase}}
                     </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="mobile">
                     <mat-header-cell *matHeaderCellDef>Mobile No.</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.mobileNumber}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.customer.mobileNumber}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="pan">
                     <mat-header-cell *matHeaderCellDef>PAN</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.panCardNumber | uppercase}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.customer.panCardNumber | uppercase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="date">
                     <mat-header-cell *matHeaderCellDef>Date & Time</mat-header-cell>
                     <mat-cell *matCellDef="let role">
-                        <span class="d-block">{{role.customerKyc.createdAt | date:'mediumDate'}},&nbsp;</span>
+                        <span class="d-block">{{role.createdAt | date:'mediumDate'}},&nbsp;</span>
                     </mat-cell>
                 </ng-container>
 
@@ -68,7 +69,15 @@
 
                 <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
             </mat-table>
+            <div class="mat-table__message" *ngIf="!dataSource.hasItems">No records found</div>
+            <!-- Message for empty data  -->
+            <div class="mat-table__message" *ngIf="dataSource.isPreloadTextViewed$ | async">Please wait....</div>
+        </div>
+        <div class="mat-table__bottom">
+            <mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
 
-        </div> -->
+            <mat-paginator [pageSize]="25" [pageSizeOptions]="[10,25,50,100]"
+                [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
+        </div>
     </kt-portlet-body>
 </kt-portlet>
