--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.scss
@@ -7,7 +7,8 @@
     /* position the unit to the right of the wrapper */
     .per-gram::after {
         position   : absolute;
-        top        : 11px;
+        top: 50%;
+    transform: translateY(-50%);
         right      : 1em;
         transition : all .05s ease-in-out;
         content    : 'Per gram';
