--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/kyc-details/kyc-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/kyc-details/kyc-details.component.html
@@ -26,22 +26,19 @@
 
     <div class="row kt-margin-t-20 kt-margin-b-20">
         <div class="offset-2 col">
-            <div class="img-container">
+            <div class="img-container" *ngIf="controls.identityProof.value.length == 0">
                 <img class="placeholder-image" src="../../../../../../assets/media/icons/image-placeholder.png"
                     alt="placeholder">
             </div>
-            <!-- <div *ngIf="images.identityProof.length>0">
-                    <div class="row ">
-                        <div class="kt-margin-r-15" *ngFor="let img of images.identityProof, index as idx">
-                            <div class="img-container">
-                                <img class="border-rad-15 fetched-image" [src]="img" alt="">
-                                <img src="../../../../../assets/media/icons/cancel.svg" alt=""
-                                    class="kt-pointer remove-icon"
-                                    (click)="removeImages(idx, 'identityProof');">
-                            </div>
+            <div *ngIf="controls.identityProof.value.length>0">
+                <div class="row ">
+                    <div class="kt-margin-r-15" *ngFor="let img of controls.identityProof.value, index as idx">
+                        <div class="img-container">
+                            <img class="border-rad-15 fetched-image" [src]="img" alt="">
                         </div>
                     </div>
-                </div> -->
+                </div>
+            </div>
         </div>
     </div>
 
@@ -143,39 +140,22 @@
                     <div class=" kt-margin-t-20 kt-margin-b-20">
                         <div class="row">
                             <div class="col">
-                                <div class="offset-4 img-container">
+                                <div class="offset-4 img-container"
+                                    *ngIf="addressForm.controls.addressProof.value.length ==0">
                                     <img class="placeholder-image"
                                         src="../../../../../../assets/media/icons/image-placeholder.png"
                                         alt="placeholder">
                                 </div>
 
-                                <!-- <div *ngIf="i==0 && images.residential.length > 0">
-                                        <div class="row">
-                                            <div class="col-6"
-                                                *ngFor="let img of images.residential, index as idx">
-                                                <div class="img-container">
-                                                    <img class="fetched-image" [src]="img" alt="">
-                                                    <img src="../../../../../assets/media/icons/cancel.svg"
-                                                        alt="" class="kt-pointer remove-icon"
-                                                        (click)="removeImages(idx, 'residential');">
-                                                </div>
+                                <div *ngIf="addressForm.controls.addressProof.value.length > 0">
+                                    <div class="row">
+                                        <div class="col-6" *ngFor="let img of addressForm.controls.addressProof.value, index as idx">
+                                            <div class="img-container">
+                                                <img class="fetched-image" [src]="img" alt="">
                                             </div>
                                         </div>
-                                    </div> -->
-
-                                <!-- <div *ngIf="i==1 && images.permanent.length > 0">
-                                        <div class="row">
-                                            <div class="col-6"
-                                                *ngFor="let img of images.permanent, index as idx">
-                                                <div class="img-container">
-                                                    <img class="fetched-image" [src]="img" alt="">
-                                                    <img src="../../../../../assets/media/icons/cancel.svg"
-                                                        alt="" class="kt-pointer remove-icon"
-                                                        (click)="removeImages(idx, 'permanent');">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div> -->
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
