--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-interest-amount/final-interest-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-interest-amount/final-interest-amount.component.html
@@ -4,28 +4,32 @@
             <div class="col-6">
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label>Parnter Name</label>
+                        <label class ="mandatory">Parnter Name</label>
                     </div>
                     <div class="col-7">
-                        <select formControlName="partnerName" class="form-control" (change)="getSchemes()">
+                        <select formControlName="partnerName" class="form-control" (change)="getSchemes()"
+                        [class.isError]="controls.partnerName.touched && controls.partnerName.invalid">
                             <option value="" [selected]="true" [disabled]="true">Select Partner</option>
                             <option [value]="partner.id" *ngFor="let partner of partnerList">
                                 {{partner.name | titlecase}}
                             </option>
                         </select>
+                        <mat-error *ngIf="controls.partnerName.touched && controls.partnerName.invalid">Filed is required</mat-error>
                     </div>
                 </div>
             </div>
             <div class="col-6">
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label>Scheme Name</label>
+                        <label class ="mandatory">Scheme Name</label>
                     </div>
                     <div class="col-7">
-                        <select formControlName="schemeName" class="form-control">
-                            <option value="" [selected]="true" [disabled]="true">Select Tenure</option>
+                        <select formControlName="schemeName" class="form-control"
+                        [class.isError]="controls.schemeName.touched && controls.schemeName.invalid">
+                            <option value="" [selected]="true" [disabled]="true">Select Schemes</option>
                             <option [value]="schemes.id" *ngFor="let schemes of schemesList.schemes">{{schemes.schemeName}}</option>
                         </select>
+                        <mat-error *ngIf="controls.schemeName.touched && controls.schemeName.invalid">Filed is required</mat-error>
                     </div>
                 </div>
             </div>
@@ -35,20 +39,28 @@
             <div class="col-6">
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label>Loan Amount</label>
+                        <label class ="mandatory">Start Date</label>
                     </div>
                     <div class="col-7">
-                        <input class="form-control" formControlName="finalLoanAmount" placeholder="0,00,000" />
+                        <input type="text" class="form-control" [matDatepicker]="picker" (click)="picker.open()"
+                        formControlName="loanStartDate"
+                        [class.isError]="controls.loanStartDate.touched && controls.loanStartDate.invalid"
+                        placeholder="4/5/2020"  readonly (dateChange)="setEndDate()">
+                    <mat-datepicker #picker></mat-datepicker>
+                    <mat-error *ngIf="controls.loanStartDate.errors?.required && controls.loanStartDate.touched">
+                        Required field
+                    </mat-error>
                     </div>
                 </div>
             </div>
             <div class="col-6">
+                
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label>Tenure</label>
+                        <label class ="mandatory">Tenure</label>
                     </div>
                     <div class="col-7">
-                        <select formControlName="tenure" class="form-control">
+                        <select formControlName="tenure" class="form-control" (change)="setEndDate()">
                             <option value="" [selected]="true" [disabled]="true">Select Tenure</option>
                             <option [value]="ten" *ngFor="let ten of tenure">{{ten}}</option>
                         </select>
@@ -59,58 +71,64 @@
 
         <div class="row kt-margin-b-20">
             <div class="col-6">
+               
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label>Start Date</label>
+                        <label class ="mandatory">Loan End Date</label>
                     </div>
                     <div class="col-7">
-                        <input class="form-control" formControlName="loanStartDate" placeholder="01 Januaury, 2020" />
+                        <input class="form-control" formControlName="loanEndDate" placeholder="02 May, 2020" [matDatepicker]="picker1"/>
+                        <mat-datepicker #picker1></mat-datepicker>
                     </div>
                 </div>
             </div>
             <div class="col-6">
+                
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label>Loan Repay Date</label>
+                        <label class ="mandatory">Loan Amount</label>
                     </div>
                     <div class="col-7">
-                        <input class="form-control" formControlName="loanEndDate" placeholder="02 May, 2020" />
+                        <input class="form-control" formControlName="finalLoanAmount" placeholder="0,00,000" 
+                        (blur)="amountValidation()"/>
+                        <mat-error *ngIf="controls.finalLoanAmount.errors?.invalidAmt">Enter Valid Amount</mat-error>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="row kt-margin-b-20">
+            
             <div class="col-6">
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label>Gold Gross Weight</label>
+                        <label class ="mandatory">Payment Frequency</label>
                     </div>
                     <div class="col-7">
-                        <input class="form-control" formControlName="goldGrossWeight" placeholder="0.00 gram" />
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="row">
-                    <div class="col-4 form-label">
-                        <label>Repay Date Type</label>
-                    </div>
-                    <div class="col-7">
-                        <select class="form-control" formControlName="paymentType">
+                        <select class="form-control" formControlName="paymentType" (change)="getIntrest()">
                             <option value="" [selected]="true" [disabled]="true">Select Repay Period</option>
-                            <option [value]="pay.name" *ngFor="let pay of repayType">{{pay.name | titlecase}}</option>
+                            <option [value]="pay.value" *ngFor="let pay of repayType">{{pay.name | titlecase}}</option>
                         </select>
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="row kt-margin-b-20">
             <div class="col-6">
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label>Gold Net Weight</label>
+                        <label class ="mandatory">Interest Rate</label>
+                    </div>
+                    <div class="col-7">
+                        <input class="form-control" formControlName="interestRate" placeholder="00%" />
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- <div class="row kt-margin-b-20">
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-4 form-label">
+                        <label class ="mandatory">Gold Net Weight</label>
                     </div>
                     <div class="col-7">
                         <input class="form-control" formControlName="goldNetWeight" placeholder="0.00 gram" />
@@ -120,20 +138,20 @@
             <div class="col-6">
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label>Final Net weight</label>
+                        <label class ="mandatory">Final Net weight</label>
                     </div>
                     <div class="col-7">
                         <input class="form-control" formControlName="finalNetWeight" placeholder="0.00 gram" />
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="row kt-margin-b-20">
             <div class="col-6">
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label>Interest Rate</label>
+                        <label class ="mandatory">Processing Charges</label>
                     </div>
                     <div class="col-7">
                         <input class="form-control" formControlName="interestRate" placeholder="00%" />
@@ -141,14 +159,14 @@
                 </div>
             </div>
             <div class="col-6">
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-4 form-label">
-                        <label>Current LTV Amount</label>
+                        <label class ="mandatory">Current LTV Amount</label>
                     </div>
                     <div class="col-7">
                         <input class="form-control" formControlName="currentLtvAmount" placeholder="0,00,000" />
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <div class="col-6 kt-margin-t-30 kt-margin-b-30">
@@ -169,30 +187,14 @@
                         <table class="table table-bordered">
                             <thead>
                                 <tr>
-                                    <th scope="col" style="width: 50%" class="rating-title">Company</th>
-                                    <th scope="col" style="width: 50%" class="rating-cce">CCE</th>
+                                    <th scope="col" style="width: 50%" class="rating-title">Date</th>
+                                    <th scope="col" style="width: 50%" class="rating-cce">Interest Amount</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>05/06/2020</td>
-                                    <td>10,000</td>
-                                </tr>
-                                <tr>
-                                    <td>05/06/2020</td>
-                                    <td>10,000</td>
-                                </tr>
-                                <tr>
-                                    <td>05/06/2020</td>
-                                    <td>10,000</td>
-                                </tr>
-                                <tr>
-                                    <td>05/06/2020</td>
-                                    <td>10,000</td>
-                                </tr>
-                                <tr>
-                                    <td>05/06/2020</td>
-                                    <td>10,000</td>
+                                <tr *ngFor="let date of dateOfPayment;index as idx">
+                                    <td>{{date | date :'mediumDate'}}</td>
+                                    <td [attr.rowspan]="colJoin" *ngIf="idx%colJoin == 0 || colJoin == null">{{intrestAmount | currency : 'INR'}}</td>
                                 </tr>
                             </tbody>
                         </table>
